# bmad-miro-sync

./: .bmad-miro.example.toml  .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex/: config.toml
_bmad-output/planning-artifacts/: architecture.md  browser-automation-lessons-learned-2026-04-30.md  epics.md  implementation-readiness-report-2026-04-17-revised.md  implementation-readiness-report-2026-04-17.md  prd.md  product-brief.md  solutioning-readiness.md  source-ledger-implementation-handoff-2026-04-27.md  source-ledger-implementation-plan.md  sprint-change-proposal-2026-04-17.md  sprint-change-proposal-2026-05-15.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: browser-automation-runbook.md  miro-board-taxonomy.md  windows-browser-loop.md
scripts/linux/: get-windows-host-ip.sh  start-playwright-visible-browser.sh
scripts/windows/: start-cdp-relay.ps1  start-playwright-visible-browser.ps1
src/bmad_miro_sync/: __init__.py  classifier.py  cli.py  comments.py  config.py  content_blocks.py  content_sanitizer.py  decisions.py  discovery.py  host_exports.py  installer.py  manifest.py  markdown.py  miro_api.py  miro_auth.py  models.py  planner.py  (+5 more)
tests/: test_cli.py  test_codex_adapter.py  test_comments.py  test_content_blocks.py  test_decisions.py  test_discovery.py  test_installer.py  test_manifest.py  test_markdown.py  test_miro_api.py  test_planner.py  test_readiness.py  test_source_status.py  test_structure_analysis.py  test_workflow.py
(+8 files in other folders)
